fix: position mission map and description correctly on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1237,6 +1237,11 @@ td, th {
 
 }
 
+.missions-list-and-description{
+    display: flex;
+    flex-direction:column-reverse;
+}
+
 .mission-name{
     overflow: hidden;
     text-overflow: ellipsis;
